hphp/hack/test/typecheck/test_consts14.php.exp
File "test_consts14.php", line 15, characters 7-7:
This object is of type B (Typing[4110])
File "test_consts14.php", line 15, characters 17-17:
It is incompatible with this object of type A
because some declarations are incompatible.
Read the following to see why:
File "test_consts14.php", line 4, characters 9-11:
This is an int
File "test_consts14.php", line 10, characters 9-14:
It is incompatible with a string
